共通コンテンツの作成
共通パーツ作成

--- a/index.html
+++ b/index.html
@@ -8,10 +8,194 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/app.css">
 </head>
-<body>
-  
+<body class="page-front">
+  <header class="header">
+    <div class="headerInner">
+      <h1 class="headerLogos">
+        <span class="headerLogo"><img src="./assets/images/common/logo_daito.svg" alt="株式会社ダイトー"></span>
+        <span class="headerLogo"><img src="./assets/images/common/logo_metal.svg" alt="大東金属株式会社"></span>
+      </h1>
+      <p class="headerLogosSmall">
+        <img src="./assets/images/common/logo_small.svg" alt="株式会社ダイトー, 大東金属株式会社">
+      </p>
+      <div class="headerNavigation">
+        <nav class="navigation">
+          <ul class="navigationList">
+            <li class="navigationItem"><a href="#about"><i></i>会社概要</a></li>
+            <li class="navigationItem"><a href="#contact"><i></i>お問い合わせ</a></li>
+          </ul>
+          <p class="navigationTel"><a href="tel:0666566620"><img src="./assets/images/icons/icon_call.svg" alt="電話" width="30" aria-hidden="hidden"><span>06-6656-6620</span></a> </p>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="contents">
+    <div class="inner">
+      <h2>免震工事のダイトー。</h2>
+      <section>
+        <h3 class="frontHeadingEn">Manufacturing</h3>
+        <p class="frontLeadText">ベースプレートの製作・加工の<br>
+          ほぼすべての工程を自社でやっており、<br>
+          低コストで製作可能です。</p>
+      </section>
+      <section>
+        <h3 class="frontHeadingEn">Construction</h3>
+        <p class="frontLeadText">弊社直雇用、正社員の<br>
+          経験豊富な職人が施工いたします。</p>
+      </section>
+      <section>
+        <h3 class="frontLeadTextLarge">日本全国の<br>免震施工実績</h3>
+        <dl>
+          <dt>総施工数</dt>
+          <dd>200,000基以上</dd>
+        </dl>
+        <dl>
+          <dt>総施工数</dt>
+          <dd>200,000基以上</dd>
+        </dl>
+        <dl>
+          <dt>国外</dt>
+          <dd>50,000基以上</dd>
+        </dl>
+        <p>map</p>
+        <h4>GLOBAL</h4>
+        <ul>
+          <li>韓国</li>
+          <li>台湾</li>
+          <li>インドネシア</li>
+          <li>ハイチ</li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="frontHeadingEn">Information</h3>
+        <p class="frontLeadText">会社概要</p>
+        <table class="frontCompanyTable">
+          <thead>
+            <tr>
+              <th scope="row">会社名</th>
+              <th scope="col">株式会社ダイトー</th>
+              <th scope="row">大東金属株式会社</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>代表取締役</th>
+              <td rowspan="2">井上一郎</td>
+            </tr>
+            <tr>
+              <th>設立</th>
+              <td>1997年7月</td>
+              <td>1938年1月</td>
+            </tr>
+            <tr>
+              <th>所在地</th>
+              <td>大阪市西成区千本南2-16-43</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>連絡先</th>
+              <td>
+                <ul>
+                  <li>TEL：06-6656-6620</li>
+                  <li>FAX：06-6656-6622</li>
+                </ul>
+              </td>
+              <td>
+                <ul>
+                  <li>TEL：06-6658-3410</li>
+                  <li>FAX：06-6657-0823</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <th>資本金</th>
+              <td>10,000,000円</td>
+              <td>10,000,000円</td>
+            </tr>
+            <tr>
+              <th>事業内容</th>
+              <td>免震装置の施工、xxx</td>
+              <td>免震装置用ベースプレートの製造、鉄筋カプラーの製造、xxx</td>
+            </tr>
+            <tr>
+              <th>事業免許</th>
+              <td>建設業許可（xx号）</td>
+              <td>xxx</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <section>
+          <h4>本社兼大阪工場</h4>
+          <p>大阪市西成区千本南2-16-43</p>
+          <ul>
+            <li>TEL：06-6656-6620</li>
+            <li>FAX：06-6656-6622</li>
+          </ul>
+        </section>
+        <section>
+          <h4>長浜工場</h4>
+          <p>滋賀県長浜市細江町900-3</p>
+          <ul>
+            <li>TEL：00-0000-0000</li>
+            <li>FAX：00-0000-0000</li>
+          </ul>
+        </section>
+        <section>
+          <h4>東京営業所</h4>
+          <p>東京都千代田区東神田2-3-9 グレース東神田1001号</p>
+          <ul>
+            <li>TEL 00-0000-0000</li>
+          </ul>
+        </section>
+        <section>
+          <h4>九州営業所</h4>
+          <p>福岡県北九州市小倉南区中曽根東3-3-57</p>
+          <ul>
+            <li>TEL 00-0000-0000</li>
+          </ul>
+        </section>
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="inner">
+      <h2 class="frontHeadingEn">Contact</h2>
+      <p class="frontLeadText">お問い合わせ</p>
+      <div class="footerContact">
+        <dl class="footerContactBlock">
+          <dt class="footerContactHeading hiddenSp">株式会社ダイトー</dt>
+          <dd class="footerContactData">
+            <ul class="footerContactList">
+              <li class="footerContactListItem"><img src="./assets/images/icons/icon_call.svg" alt="電話" width="30" aria-hidden="hidden">06-6656-6620</li>
+              <li class="footerContactListItem"><img src="./assets/images/icons/icon_fax.svg" alt="FAX" width="30">06-6656-6622</li>
+            </ul>
+          </dd>
+        </dl>
+        <dl class="footerContactBlock hiddenSp">
+          <dt class="footerContactHeading">大東金属株式会社</dt>
+          <dd class="footerContactData">
+            <ul class="footerContactList">
+              <li class="footerContactListItem"><img src="./assets/images/icons/icon_call.svg" alt="電話" width="30" aria-hidden="hidden">06-6658-3410</li>
+              <li class="footerContactListItem"><img src="./assets/images/icons/icon_fax.svg" alt="FAX" width="30">06-6657-0823</li>
+            </ul>
+          </dd>
+        </dl>
+      </div>
+      <p class="footerContactMail"><a href="mailto:info@k-daito.com"><img src="./assets/images/icons/icon_mail.svg" alt="FAX" width="30">info@k-daito.com</a></p>
+
+      <div class="footerBottom">
+        <ul class="footerLogos">
+          <li class="footerLogo"><img src="./assets/images/common/logo_daito.svg" alt="株式会社ダイトー"></li>
+          <li class="footerLogo"><img src="./assets/images/common/logo_metal.svg" alt="大東金属株式会社"></li>
+        </ul>
+        <p class="footerCopyright"><small>©2022 DAITO Corp.</small></p>
+      </div>
+    </div>
+  </footer>
+  <div class="back"></div>
 </body>
 </html>
