--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社ダイトー | 大東金属株式会社</title>
-  <meta name="description" content="**********">
+  <meta name="description" content="日本全国の免震工事を担っている株式会社ダイトー・大東金属株式会社のホームページです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/app.css">
   <link rel="preload" href="./assets/images//pages/front/visual_image.jpg" as="image">
-  <link rel="canonical" href="**********">
+  <link rel="canonical" href="https://www.k-daito.com">
   <meta property="og:locale" content="ja_JP">
   <meta property="og:type" content="website">
   <meta property="og:title" content="株式会社ダイトー | 大東金属株式会社">
-  <meta property="og:description" content="**********">
-  <meta property="og:url" content="**********">
+  <meta property="og:description" content="日本全国の免震工事を担っている株式会社ダイトー・大東金属株式会社のホームページです。">
+  <meta property="og:url" content="https://www.k-daito.com">
   <meta property="og:site_name" content="株式会社ダイトー | 大東金属株式会社">
-  <meta property="og:image" content="**********/assets/images/ogp.png" />
+  <meta property="og:image" content="" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:type" content="image/jpeg" />
@@ -110,15 +110,7 @@
           </header>
           <dl class="frontAchievementLength">
             <dt class="frontAchievementLengthHeading">総施工数</dt>
-            <dd class="frontAchievementLengthData"><span>200,000</span>基以上</dd>
-          </dl>
-          <dl class="frontAchievementLengthSmall">
-            <dt class="frontAchievementLengthSmallHeading">国内</dt>
-            <dd class="frontAchievementLengthSmallData"><span>200,000</span>基以上</dd>
-          </dl>
-          <dl class="frontAchievementLengthSmall">
-            <dt class="frontAchievementLengthSmallHeading">国外</dt>
-            <dd class="frontAchievementLengthSmallData"><span>50,000</span>基以上</dd>
+            <dd class="frontAchievementLengthData"><span>60,000</span>基以上</dd>
           </dl>
         </div>
         <p class="frontAchievementMap jsLazyView"><img src="./assets/images/pages/front/im_map_achievement.png" alt="国内の実績地図">
@@ -192,8 +184,8 @@
                 </tr>
                 <tr>
                   <th class="frontCompanyTableHeading" scope="row">事業免許</th>
-                  <td class="frontCompanyTableData isDaito">建設業許可（xx号）</td>
-                  <td class="frontCompanyTableData isMetal">xxx</td>
+                  <td class="frontCompanyTableData isDaito">国土交通大臣許可　第026121号</td>
+                  <td class="frontCompanyTableData isMetal"></td>
                 </tr>
               </tbody>
             </table>
@@ -216,22 +208,22 @@
                 <h4 class="frontCompanyLocationHeading">長浜工場</h4>
                 <p class="frontCompanyLocationAddress">滋賀県長浜市細江町900-3</p>
                 <ul class="frontCompanyLocationContats">
-                  <li class="frontCompanyLocationContat">TEL：00-0000-0000</li>
-                  <li class="frontCompanyLocationContat">FAX：00-0000-0000</li>
+                  <li class="frontCompanyLocationContat">TEL：0749-72-8270</li>
+                  <li class="frontCompanyLocationContat">FAX：0749-72-8271</li>
                 </ul>
               </section>
               <section class="frontCompanyLocation">
                 <h4 class="frontCompanyLocationHeading">東京営業所</h4>
                 <p class="frontCompanyLocationAddress">東京都千代田区東神田2-3-9 グレース東神田1001号</p>
                 <ul class="frontCompanyLocationContats">
-                  <li class="frontCompanyLocationContat">TEL：00-0000-0000</li>
+                  <li class="frontCompanyLocationContat">TEL：03-5901-9755</li>
                 </ul>
               </section>
               <section class="frontCompanyLocation">
                 <h4 class="frontCompanyLocationHeading">九州営業所</h4>
                 <p class="frontCompanyLocationAddress">福岡県北九州市小倉南区中曽根東3-3-57</p>
                 <ul class="frontCompanyLocationContats">
-                  <li class="frontCompanyLocationContat">TEL：00-0000-0000</li>
+                  <li class="frontCompanyLocationContat">TEL：093-472-7080</li>
                 </ul>
               </section>
             </div>
