--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                 </tr>
                 <tr>
                   <th class="frontCompanyTableHeading" scope="row">事業内容</th>
-                  <td class="frontCompanyTableData isDaito">免震装置の施工、xxx</td>
-                  <td class="frontCompanyTableData isMetal">免震装置用ベースプレートの製造、鉄筋カプラーの製造、xxx</td>
+                  <td class="frontCompanyTableData isDaito">免震装置・ベースプレートの施工/td>
+                  <td class="frontCompanyTableData isMetal">免震装置用ベースプレートの製造、鉄筋カプラーの製造</td>
                 </tr>
                 <tr>
                   <th class="frontCompanyTableHeading" scope="row">事業免許</th>
