--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社ダイトー | 大東金属株式会社</title>
-  <meta name="description" content="日本全国の免震工事を担っている株式会社ダイトー・大東金属株式会社のホームページです。">
+  <meta name="description" content="日本全国の免震工事なら株式会社ダイトー・大東金属株式会社のホームページです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
   <meta property="og:locale" content="ja_JP">
   <meta property="og:type" content="website">
   <meta property="og:title" content="株式会社ダイトー | 大東金属株式会社">
-  <meta property="og:description" content="日本全国の免震工事を担っている株式会社ダイトー・大東金属株式会社のホームページです。">
-  <meta property="og:url" content="https://www.k-daito.com">
+  <meta property="og:description" content="日本全国の免震工事なら株式会社ダイトー・大東金属株式会社のホームページです。">
+  <meta property="og:url" content="https://k-daito.com">
   <meta property="og:site_name" content="株式会社ダイトー | 大東金属株式会社">
   <meta property="og:image" content="" />
   <meta property="og:image:width" content="1200" />
