--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>株式会社ダイトー | 大東金属株式会社</title>
+  <title>免震工事の株式会社ダイトー | 大東金属株式会社</title>
   <meta name="description" content="日本全国の免震工事なら株式会社ダイトー・大東金属株式会社のホームページです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
